--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
         "cors": "^2.8.5",
         "eslint-config-airbnb": "^19.0.4",
         "express": "^4.18.2",
-        "netlify-cli": "^14.2.1",
-        "nodemon": "^2.0.22",
-        "serverless-http": "^3.2.0"
+        "nodemon": "^2.0.22"
     },
     "devDependencies": {
         "eslint": "^8.37.0",
